# MythosMUD

./:  --grep=  .act.secrets.example  .actrc  .codacy.yml  .coveragerc  .dockerignore  .editorconfig  .env  .env.e2e_test  .env.local  .env.local.bak  .env.test  .env.unit_test  .gitattributes  .gitignore  .gitmodules  .graphifyignore  .grype.yaml  .impeccable.md  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  .semgrepignore  .sqlfluff  AGENTS.md  ARCHITECTURE_REMEDIATION_PLAN.md  BANDIT_REMEDIATION_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CONTRIBUTING.md  CURSOR_QUICK_REFERENCE.md  CURSOR_WORKTREE_INTEGRATION.md  DATABASE_MIGRATION.md  DATA_WORKFLOW_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_AI.md  Dockerfile.ci-test  (+110 more)
server/: .coveragerc  .pre-commit-config.yaml  README.md  TEST_PROD_SEPARATION.md  alias_storage.py  async_persistence.py  async_persistence_constants.py  async_persistence_direct_queries.py  async_persistence_room_loader.py  auth.py  auth_utils.py  check_invites.py  check_routes.py  command_handler.py  command_handler_new.py  command_handler_unified.py  command_handler_v2.py  config_loader.py  container.py  coverage.json  database.py  database_config_helpers.py  database_helpers.py  debug_character_creation.py  debug_sse.py  debug_test.py  dependencies.py  enhanced_main.py  env.example  error_handlers.py  error_types.py  exceptions.py  invites.json  legacy_error_handlers.py  legacy_error_sanitization.py  logging_config.py  main.py  main_new.py  metadata.py  migration_report.md  (+27 more)
server/api/: __init__.py  base.py  character_creation.py  container_endpoints_basic.py  container_endpoints_loot.py  container_events.py  container_exception_handlers.py  container_helpers.py  container_models.py  containers.py  game.py  map_helpers.py  map_minimap.py  maps.py  metrics.py  monitoring.py  monitoring_models.py  player_effects.py  player_helpers.py  player_respawn.py  players.py  professions.py  real_time.py  rooms.py  skills.py  system_monitoring.py
server/app/: factory.py  game_tick_processing.py  lifespan.py  lifespan_event_subscriptions.py  lifespan_magic.py  lifespan_shutdown.py  lifespan_startup.py  logging.py  memory_cleanup_service.py  memory_lifespan_coordinator.py  task_registry.py  test_factory.py  tracked_task_manager.py
server/auth/: __init__.py  argon2_utils.py  dependencies.py  email_utils.py  endpoints.py  invites.py  jwt_strategy.py  token_epoch.py  users.py
server/caching/: __init__.py  cache_service.py  lru_cache.py
server/command_handler/: __init__.py  alias_expansion.py  catatonia_check.py  command_execution_request.py  command_input.py  processing.py
server/commands/: __init__.py  admin_commands.py  admin_mute_commands.py  admin_permission_utils.py  admin_setlucidity_command.py  admin_setstat_command.py  admin_shutdown_command.py  admin_summon_command.py  admin_teleport_commands.py  admin_teleport_utils.py  alias_commands.py  channel_commands.py  combat.py  combat_app_protocols.py  combat_attack.py  combat_flee.py  combat_handler.py  combat_helpers.py  combat_loader.py  combat_taunt.py  command_service.py  communication_commands.py  communication_commands_flows.py  communication_commands_support.py  container_helpers_inventory.py  container_helpers_inventory_display.py  container_helpers_inventory_find.py  container_helpers_inventory_logging.py  container_helpers_inventory_ops.py  debrief_command.py  emote_commands.py  equipment_helpers.py  exploration_commands.py  follow_commands.py  go_command.py  goto_helpers.py  help_commands.py  inventory_command_coercion.py  inventory_command_contracts.py  inventory_command_helpers.py  (+40 more)
server/config/: __init__.py  models.py  npc_config.py
server/constants/: __init__.py  spawn_defaults.py
server/container/: __init__.py  main.py  utils.py
server/container_persistence/: __init__.py  container_persistence.py
server/data/: players.json
server/docs/: ENHANCED_LOGGING_GUIDE.md  LOGGING_IMPLEMENTATION_SUMMARY.md
server/domain/: __init__.py
server/error_handlers/: __init__.py  pydantic_error_handler.py  standardized_responses.py
server/events/: __init__.py  combat_events.py  distributed_event_bus.py  event_bus.py  event_serialization.py  event_types.py  nats_event_bridge.py
server/game/: character_creation_service.py  chat_message.py  chat_message_helpers.py  chat_message_senders.py  chat_moderation.py  chat_nats_publisher.py  chat_pose_helpers.py  chat_pose_manager.py  chat_service.py  chat_validation_helpers.py  chat_validator.py  chat_whisper_tracker.py  emote_service.py  follow_service.py  instance_manager.py  level_curve.py  level_service.py  mechanics.py  movement_monitor.py  movement_service.py  party_service.py  player_creation_service.py  player_respawn_wrapper.py  player_schema_converter.py  player_search_service.py  player_service.py  player_state_service.py  profession_service.py  room_service.py  skill_service.py  stats_generator.py  weapons.py
server/help/: __init__.py  help_content.py
server/infrastructure/: __init__.py  message_broker.py  nats_broker.py
server/logging/: README.md  __init__.py  admin_actions_logger.py  combat_audit.py  enhanced_logging_config.py  log_aggregator.py  logging_file_setup.py  logging_handlers.py  logging_processors.py  logging_utilities.py  player_guid_formatter.py
server/middleware/: __init__.py  allowed_cors.py  command_rate_limiter.py  comprehensive_logging.py  correlation_middleware.py  error_handling_middleware.py  metrics_collector.py  request_logging.py  security_headers.py
server/models/: __init__.py  alias.py  base.py  calendar.py  combat.py  command.py  command_admin.py  command_alias.py  command_base.py  command_channel.py  command_combat.py  command_communication.py  command_exploration.py  command_follow.py  command_inventory.py  command_magic.py  command_moderation.py  command_party.py  command_player_state.py  command_utility.py  container.py  emote.py  game.py  health.py  invite.py  item.py  lucidity.py  npc.py  optimized_game.py  player.py  player_effect.py  (+13 more)
(+7149 files in other folders)
