[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mythosmud"
version = "0.1.0"
description = "MythosMUD - A Cthulhu Mythos-themed MUD"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "argon2-cffi>=25.1.0",
    "python-jose>=3.5.0",
    "PyJWT>=2.10.1",  # Required by fastapi-users for JWT token handling
    "faker>=40.1.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "setuptools>=80.9.0,<81",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "psycopg2-binary>=2.9.11",
    "anyio>=4.0.0",  # Unified async API for backend-agnostic code
    "asyncpg>=0.31.0",
    "pytest-asyncio>=1.3.0",
    "jsonschema>=4.25.1,<4.26.0",
    "bleach>=6.3.0",
    "tqdm>=4.67.1",
    "click>=8.1.8,<8.2.0", # Command line interface for command parsing and validation (constrained by semgrep)
    "defusedxml>=0.7.1", # Secure XML parsing for coverage reports
    "pwdlib[bcrypt]>=0.3.0", # Required by fastapi-users (we override the hashing)
    "nats-py>=2.12.0", # NATS Python client for messaging
    "psutil>=7.2.1", # System and process utilities for memory monitoring
    "ftfy>=6.3.1", # Fixes "bad" Unicode input safely
    "strip-ansi>=0.1.1", # Removes ANSI escape codes
    "playwright>=1.57.0",
    "pytest-timeout>=2.4.0",
    "networkx>=3.6.1", # Graph analysis for alias cycle detection (CRITICAL-3 fix)
    "python-statemachine>=2.5.0",
    "prometheus-client>=0.23.1",
    "numpy>=2.4.1", # Numerical computing for performance monitoring and statistical calculations
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",  # Parallel test execution (required for -n auto in pytest.ini)
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
    "pytest-asyncio>=1.3.0",
    "debugpy>=1.8.19",
    "ruff>=0.14.10",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",  # Static type checking
    "types-python-dateutil>=2.9.0.20251115",  # Type stubs for dateutil
    "types-bleach>=6.3.0.20251115",  # Type stubs for bleach
    "semgrep>=1.146.0",  # Static analysis for security and best practices
    "websocket-client>=1.9.0",  # WebSocket client for testing connection termination
    "bandit>=1.9.2",  # Python security linter
    "pylint>=4.0.4",  # Python code quality linter
    "pylint-per-file-ignores>=3.2.0",  # Per-file ignore support for pylint (matches ruff per-file-ignores)
    "sqlfluff>=3.5.0",  # SQL linting and formatting
    "lizard>=1.19.0",  # Code complexity analyzer (used by Codacy)
    # sqlint>=0.2.1 - REMOVED: Conflicts with click>=8.1.8 (sqlint requires click==7.0)
    # Use sqlfluff instead, which provides comprehensive SQL linting
]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe complexity (includes C901: too complex)
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by line-length
    "B008",  # do not perform function calls in argument defaults
]
# Cyclomatic complexity threshold: 11 (matches Codacy threshold)
# Functions with complexity > 10 will trigger C901 violation
[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]
"docs/**/*" = ["F821", "F841", "F811", "B904", "E402"]
"server/stubs/**/*.pyi" = ["UP046"]  # Stub files use old Generic syntax for compatibility

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["server"]
known_third_party = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "argon2",
    "jose",
    "faker",
    "dotenv",
    "sqlalchemy",
    "structlog",
    "fastapi_users",
    "pytest",
    "jsonschema",
    "bleach",
    "tqdm",
    "click",
    "passlib",
    "nats",
    "psutil",
    "ftfy",
    "strip_ansi",
    "playwright",
    "prometheus_client",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["**/node_modules/**", "**/__pycache__/**", "**/.git/**"]
force_sort_within_sections = true
lines_after_imports = 2

[tool.pytest.ini_options]
testpaths = ["server/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Test discovery patterns
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__", "node_modules"]

# Markers for test categories
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security tests",
    "performance: Performance tests",
    "slow: Slow running tests",
    "regression: Bug fix regression tests",
    "coverage: Coverage improvement tests",
    "monitoring: Monitoring tests",
    "verification: Verification tests"
]

# Coverage settings
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=server",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-config=.coveragerc",
]

# Async support
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["server"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/stubs/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
fail_under = 50

[tool.mypy]
python_version = "3.12"
files = ["server"]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
mypy_path = "server/stubs"

# Gradual strictness: Enable checks incrementally for established codebase
# NOTE: Full strict = true revealed 962 errors. Enabling selectively instead.
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_optional = true
no_implicit_optional = true  # This one we've already fixed
warn_return_any = false  # Too many false positives in current codebase
warn_unreachable = true  # Best practice: enable, use inline # type: ignore[unreachable] where needed
check_untyped_defs = false  # Would require 300+ fixes
disallow_untyped_defs = false  # Would require 200+ fixes
disallow_incomplete_defs = false  # Gradually enable per-module
no_implicit_reexport = false  # Low priority for now

# Performance optimizations (best practices)
cache_dir = ".mypy_cache"
namespace_packages = false  # Changed: server is not a namespace package
explicit_package_bases = false  # Changed: not using explicit package bases

# Discovery settings
follow_imports = "normal"
ignore_missing_imports = false

# Display options
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Exclude patterns (directories that should never be type-checked)
exclude = [
    "^data/",
    "^client/",
    "^scripts/",
    "^docs/",
    "^tools/",
    "^monitoring/",
    "^server/alembic/",
    "^alembic/",  # Also exclude root-level alembic if it exists
    "^server/test_who_command_direct.py$",
    "^server/tests/scripts/",
    "^server/tests/data/",
    "^server/time/",  # Exclude server/time to avoid conflict with stdlib time module
    ".*[\\\\/]time[\\\\/]__init__\\.py$",  # Also exclude time/__init__.py specifically (Windows and Unix paths)
    "^server/persistence/__init__\\.py$",  # Exclude to avoid duplicate module conflict (matches pre-commit exclude)
]

# Per-module options - Third-party libraries without stubs or with incomplete stubs
# NOTE: analyze_error_logs and error_monitoring are in scripts/ which is excluded from mypy
# NOTE: prometheus_client is used in server.time which is excluded, so this override is unused but kept for future use
[[tool.mypy.overrides]]
module = [
    "strip_ansi.*",
    "asyncpg",
    "ftfy.*",
    "statemachine.*",
    "prometheus_client.*",
    "psycopg2.*",
    "jsonschema.*",
    "jose.*",
    "psutil.*",
    "networkx.*",
]
ignore_missing_imports = true

# Exclude server.time module to avoid conflict with stdlib time module
# Use follow_imports=skip to prevent mypy from processing this module
# NOTE: This override is unused because server.time is in the exclude list, but kept for documentation
# [[tool.mypy.overrides]]
# module = ["server.time", "server.time.*"]
# follow_imports = "skip"

# Test files - use default settings (override removed as it matches defaults)
# Human reader: Test files have many dynamic imports and mocks that confuse mypy
# AI reader: Test files use extensive mocking and dynamic imports that mypy can't resolve
# NOTE: Override removed because it matches default settings, making it unused
# [[tool.mypy.overrides]]
# module = "server.tests.*"
# ignore_missing_imports = false
# disallow_untyped_defs = false
# disallow_incomplete_defs = false
# check_untyped_defs = true

# Libraries with local stubs - use our enhanced type definitions
[[tool.mypy.overrides]]
module = ["nats.*", "structlog.*", "fastapi_users.*"]
ignore_missing_imports = false  # Use our stubs!

# Core libraries - use their official types
[[tool.mypy.overrides]]
module = ["fastapi.*", "pydantic.*", "uvicorn.*", "starlette.*"]
ignore_missing_imports = false

# SQLAlchemy - enable strict checking with plugin support
[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = false
warn_return_any = false

# Logging module - use targeted error code disabling instead of blanket ignore_errors
# NOTE: Module is actually server.structured_logging, not server.logging
[[tool.mypy.overrides]]
module = [
    "server.structured_logging.*",
]
# Disable specific error codes instead of ignore_errors = true
disable_error_code = ["var-annotated", "no-untyped-def", "no-untyped-call"]
disallow_untyped_defs = false
check_untyped_defs = false

# Player GUID formatter relies on dynamic logging context; allow untyped for now
[[tool.mypy.overrides]]
module = [
    "server.structured_logging.player_guid_formatter",
]
disallow_untyped_defs = false
check_untyped_defs = false

# pytest-mock type annotations not found by mypy in pre-commit environment despite being available in pytest-mock 3.15.1+
[[tool.mypy.overrides]]
module = ["pytest_mock.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "mypy>=1.19.1", # Static type checking
    "types-python-dateutil>=2.9.0.20251115", # Type stubs for dateutil
    "semgrep>=1.146.0", # Static analysis for security and best practices
    "websocket-client>=1.9.0", # WebSocket client for testing connection termination
    "types-bleach>=6.3.0.20251115",
    "types-psutil>=7.2.1.20251231",
    "types-jsonschema>=4.25.1.20251009",
    "types-psycopg2>=2.9.21.20251012",
    "types-python-jose>=3.5.0.20250531",
    "types-networkx>=3.6.1.20251220",
    "bandit>=1.9.2", # Python security linter
    "pylint>=4.0.4", # Python code quality linter
    "pylint-per-file-ignores>=3.2.0", # Per-file ignore support for pylint (matches ruff per-file-ignores)
    "sqlfluff>=3.5.0", # SQL linting and formatting
    "lizard>=1.19.0", # Code complexity analyzer (used by Codacy)
    "pytest-xdist>=3.8.0", # Parallel test execution (required for -n auto in pytest.ini)
    # sqlint>=0.2.1 - REMOVED: Conflicts with click>=8.1.8 (sqlint requires click==7.0)
    # Use sqlfluff instead, which provides comprehensive SQL linting
]
