[tool.poetry]
name = "mythosmud-server"
version = "0.1.0"
description = "Python FastAPI back-end for MythosMUD."
authors = ["Mark Henry <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.24.0"
pydantic = "^2.10.4"
requests = "^2.32.4"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
debugpy = "^1.8.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
