[project]
name = "mythosmud-server"
version = "0.1.0"
description = "Python FastAPI back-end for MythosMUD - A Cthulhu Mythos-themed MUD"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "requests==2.32.4",
    "httpx==0.28.1",
    "passlib==1.7.4",
    "python-jose==3.5.0",
    "bcrypt>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "debugpy==1.8.15",
    "ruff==0.12.5",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by line-length
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.pylint.messages_control]
disable = [
    "R0903",  # too-few-public-methods
    "W0511",  # fixme (TODO comments)
    "W0718",  # broad-exception-caught
    "R0914",  # too-many-locals
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0915",  # too-many-statements
    "R1705",  # no-else-return
    "R1714",  # consider-using-in
    "C0415",  # import-outside-toplevel
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "test_player_stats.py",
    "main.py",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "tests/init_test_db.py",
    "tests/mock_data.py",
    "tests/verify_test_db.py",
    "debug_test.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
